--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit>=1.32.0
+# streamlit>=1.32.0
+streamlit==1.39.0
 pandas
 PyPDF2
 openpyxl
@@ -20,7 +21,24 @@ llama-index-llms-openai
 llama-index-llms-huggingface
 llama-index-embeddings-huggingface
 accelerate
-torch
+torch 
+
+
+#openai>=1.3.5
+#llama-index==0.10.55
+#llama-index-llms-openai
+#llama-index-embeddings-openai
+numpy
+#pandas
+#python-docx
+pdfminer.six
+pillow
+faiss-cpu
+tqdm
+requests
+unstructured[pdf]
+tenacity
+beautifulsoup4
 
 
 
