Clean up requirements.txt by adding comments
Removed commented lines and adjusted formatting.

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,13 @@ numpy
 #python-docx
 pdfminer.six
 pillow
-faiss-cpu
+#faiss-cpu
 tqdm
 requests
 unstructured[pdf]
 tenacity
 beautifulsoup4
+
 
 
 
