--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,14 @@ python-docx
 langchain-huggingface
 hf_xet
 llama-index-core==0.10.30
-llama-index==0.10.55
+#llama-index==0.10.55
 llama-index-llms-openai
 llama-index-embeddings-openai
 openai>=1.3.5
 llama-index-readers-file
-llama-index-llms-openai
-llama-index-llms-huggingface
-llama-index-embeddings-huggingface
+#llama-index-llms-openai
+#llama-index-llms-huggingface
+#llama-index-embeddings-huggingface
 accelerate
 torch 
 
@@ -39,6 +39,7 @@ requests
 unstructured[pdf]
 tenacity
 beautifulsoup4
+
 
 
 
