--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ llama-index-readers-file
 #llama-index-embeddings-huggingface
 accelerate
 torch 
+docx2txt
 
 
 #openai>=1.3.5
@@ -39,6 +40,7 @@ requests
 unstructured[pdf]
 tenacity
 beautifulsoup4
+
 
 
 
